src/components/RequestQuotePage/TellUsForm/TellUsForm.scss
@import '~@ergeon/core-components/src/components/variables.scss';

.TellUsForm {
  @mixin break-text-tablet {
    br {
      display: none;
      @include tablet {
        display: unset;
      }
    }
  }

  $tawk-z-index: 2000000000;
  z-index: $tawk-z-index + 1;
  position: relative;
  display: flex;
  background-color: $gray-5;
  flex-flow: column;
  align-items: center;
  margin: 0;
  padding: $h-60 0;

  &-Wrapper {
    width: 38%;
    @include phone {
      width: 100%;
    }

    h2 {
      @include tablet() {
        font-size: $h4-size;
        line-height: $h4-line-height;
      }
    }

    .TellUsForm-Header {
      @include break-text-tablet();
    }

    p {
      @include tablet() {
        font-size: $font-mobile-size;
        line-height: $line-height-mobile;
      }
    }

    @include tablet() {
      width: 45%;
    }

    @include phone() {
      width: 90%;
    }
  }

  .is-centerHeader {
    text-align: center;
  }

  .TellUsForm-Header {
    font-weight: 600;
    margin-bottom: $v-12;
    text-align: center;

    @include tablet() {
      text-align: center;
    }
  }

  .is-centerFooter {
    place-items: center;
  }

  .TellUsForm-Footer {
    display: flex;
    justify-content: center;

    @include tablet() {
      place-items: center;
    }

    .highlight {
      display: flex;
      align-items: center;
      font-size: $font-mobile-size;
      line-height: $line-height-mobile;
      color: $black-2;

      svg {
        width: $v-12;
        margin-right: $corner-default;
        path {
          fill: $green-1;
        }
      }
    }
  }

  &-Success {
    margin: $h-40;

    &--isEmailSent {
      display: flex;
      justify-content: center;
      font-size: $font-regular-size;
      font-weight: bold;
      text-align: center;
    }
  }
}

